objects/nFORCE__Section__mdt.object
<CustomObject>
    <description>This object is reserved for future use.</description>
    <fields>
        <fullName>nFORCE__Attributes__c</fullName>
        <description>Used to hold any additional information about this section</description>
        <label>-D Attributes</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Content_Name__c</fullName>
        <label>-D Content Name</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Content__c</fullName>
        <description>Lookup to the content related to this section</description>
        <label>Content</label>
        <referenceTo>nFORCE__Content__mdt</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>nFORCE__Has_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if this record has resources</description>
        <label>Has_Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if this section is currently active</description>
        <label>Is_Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Order__c</fullName>
        <description>Determines the display order in the menu</description>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Section</label>
    <pluralLabel>Sections</pluralLabel>
</CustomObject>